# dracut-modules-olpc

./: .gitignore  Makefile  Makefile.am  README  configure.ac  dracut-modules-olpc.spec  dracut-modules-olpc.spec.in  dracut-olpc-actrd.conf  dracut-olpc-runrd.conf
05olpc-busybox/: Makefile.am  install_  module-setup.sh
20olpc-activation/: TODO  install  premount.sh  prepivot.sh  upfs.py
20olpc-bootanim/: install  startanim.sh
30olpc-activation/: Makefile.am  activate.py  check_  filesystems  install  install_  module-setup.sh  premount.sh  prepivot.sh  python-contents.txt  udhcpc.script
30olpc-boot/: Makefile.am  TODO  activate.py  check_  greplease.py  install  install_  list-python-files.sh  module-setup.sh  olpc-boot-cmdline-dt.sh  olpc-boot-cmdline.sh  olpc-boot-premount.sh  olpc-boot-prepivot.sh  olpc-sd.rules  python-contents.txt
30olpc-common/: Makefile.am  check_  install_  module-setup.sh  olpc-common-emergency.sh
30olpc-customization/: Makefile.am  README  check_  install_  module-setup.sh  process.py  unpack.py
30olpc-python/: Makefile.am  install_  list-python-files.sh  module-setup.sh  python-contents.txt
95olpc-mtd/: Makefile.am  install_  module-setup.sh  mount-mtd.sh  mtd-genrules.sh  parse-mtd.sh
act-gui/: Makefile.am  fbutil.c  fbutil.h  olpc_act_gui_client.py  olpc_act_gui_server.py  pyfb.pyx  pyvt.pyx
act-gui/images/: Makefile.am  ppmto565.py
cprl/: Makefile  Makefile.am  cprl.c  cprl.h  cprl.pyx
ipv6util/: Makefile.am  ipv6util.pyx
